--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="PROF">
 
 
-			<img class="temp" src="images/resumepic.png" alt="logo" title="MYPHOTO" style="height: 300px; width: 350px">
+			<img class="temp" src="images/resumepic.PNG" alt="logo" title="MYPHOTO" style="height: 300px; width: 350px">
 
 		<div id="whitebk" style="background-color: white">
 
