--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 		<p>
 			<table class="PBack">
 				<h1>Personal Information</h1>
-				<h1 class="obs">Objective</h1>
 				<tr><td class="bold">Age :</td><td>19 Years Old</td></tr>
 				<tr><td class="bold">Date :</td><td>July 2, 2001</td></tr>
 				<tr><td class="bold">Sex :</td><td>Male</td></tr>
@@ -56,6 +55,7 @@
 			</table>
 		</p>
 		<div class="">
+			<p class="obs">Objective</p>
 			<p class="obj">A highly skilled Information technology professional with strong experience and knowledge creating high-quality, scalable, predictable, and high-performance web applications seeks the role of Junior Software Developer at your company.</p>
 		</div>
 
