--- a/PB.html
+++ b/PB.html
@@ -11,13 +11,13 @@
 
 		<ul>
 			<li>Basic Website Development</li>
-			<img class="percentage"  src="images/skillper.png" alt="logo" title="skilllevel" >
+			<img class="percentage"  src="images/skillper.PNG" alt="logo" title="skilllevel" >
 			<li>Basic Network Security</li>
-			<img class="percentage1"  src="images/skillper1.png" alt="logo" title="skilllevel" >
+			<img class="percentage1"  src="images/skillper1.PNG" alt="logo" title="skilllevel" >
 			<li>Basic JavaScript</li>
-			<img class="percentage2"  src="images/skillper1.png" alt="logo" title="skilllevel" >
+			<img class="percentage2"  src="images/skillper1.PNG" alt="logo" title="skilllevel" >
 			<li>Microsoft Office Skills</li>
-			<img class="percentage3"  src="images/skillper.png" alt="logo" title="skilllevel" >
+			<img class="percentage3"  src="images/skillper.PNG" alt="logo" title="skilllevel" >
 			<li>Analytical</li>
 			<li>Problem Solver</li>
 			<li>Patient</li>
