--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					<td><a href="EA.html">Educational Attainment</li></td> 
 					<td><a href="PB.html">Skills</li>
 					<td><a href="awards.html">Awards</li></td>	
-					<td><a href="ref.html">References</a></li></td>
+					<td><a href="Ref.html">References</a></li></td>
 					</td> 
 				</tr>
 			</table>
